Start django templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Приветствую!</h1>
+    Меня зовут <i>{{name}}</i><br>
+    e-mail <i>{{email}}</i><br>
     <i>Сайт пока в разработке</i>
 </body>
 </html>
