Start ORM.Add model and make migrations

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        / <a href="/">Home</a> / <a href="/about"></a> / <a href="/items">Items</a>
+    </nav>
+    
     <h1>Приветствую!</h1>
     Меня зовут <i>{{name}}</i><br>
     e-mail <i>{{email}}</i><br>
