--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Main page</title>
 </head>
 <body>
     <nav>
-        / <a href="/">Home</a> / <a href="/about"></a> / <a href="/items">Items</a>
+        / <a href="/">Home</a> / <a href="/about">About</a> / <a href="/items">Items</a>
     </nav>
+    <hr>
+    <h1> Приветствую! </h1>
+
+    Меня зовут <i>{{ name }}.</i><br>
+    Мой email: <i>{{ email }}.</i><br>
+    <br>
+    Это главная страница сайта.<br>
+    <i>Сайт пока в разработке...</i>
     
-    <h1>Приветствую!</h1>
-    Меня зовут <i>{{name}}</i><br>
-    e-mail <i>{{email}}</i><br>
-    <i>Сайт пока в разработке</i>
 </body>
 </html>
