--- a/templates/about.html
+++ b/templates/about.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}
+    Author page
+{% endblock  %}
+
+{% block content %}
     <h1>Страница автора</h1>
-    {# comment #}
-    Имя:{{author.name}}<br>
-    Отчество:{{author.middle_name}}<br>
-    Фамилия:{{author.last_name}}<br>
-    телефон:{{author.phone}}<br>
-    email:{{author.email}}<br>
-</body>
-</html>
+    {# Пример комментария #}
+    Имя: {{ author.name }} <br>
+    Отчество: {{ author.middle_name }} <br>
+    Фамилия: {{ author.last_name }} <br>
+    телефон: {{ author.phone }} <br>
+    email: {{ author.email }} <br>
+{% endblock  %}
