--- a/templates/item_page.html
+++ b/templates/item_page.html
@@ -2,11 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<>>, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=+, initial-scale=1.0">
+    <title>Item page</title>
 </head>
 <body>
-    <h2> Имя: {{item.name}}</h2>
+    <nav>
+        / <a href="/">Home</a> / <a href="/about">About</a> / <a href="/items">Items</a>
+    </nav>
+    <hr>
+    <h2> Имя: {{ item.name }} </h2>
+    <div>
+        <p>Количество: {{ item.count | default:"Товар отсутствует" }}</p>
+    </div>
+    <div>
+        <p>Бренд: {{ item.brand }} </p>
+    </div>
+    <div>
+        <p>Описание: {{ item.description }}</p>
+    </div>
+    
+    <br><br>
+    <p> <a href="/items"> Назад к списку товаров </a></p>
 
 </body>
 </html>
