move static to root

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
 <img width="50px" src="{% static "images/django.svg" %}" alt="django_image">
     <h1> Приветствую! </h1>
 
-    Меня зовут <i>{{ name }}.</i><br>
-    Мой email: <i>{{ email }}.</i><br>
+    My name is: <i>{{ name }}.</i><br>
+    Мой e-mail: <i>{{ email }}.</i><br>
     <br>
     Это главная страница сайта.<br>
     <i>Сайт пока в разработке...</i>
